Fixed responsiveness on mobile and tablet devices.

--- a/styles/components/cards.scss
+++ b/styles/components/cards.scss
@@ -21,7 +21,7 @@
 }
 
 .cards {
-  margin-top: 300px;
+  margin-top: 200px;
   .row {
     max-width: 90vw;
     margin: 0px auto;
@@ -47,6 +47,7 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
+          text-align: center;
           &:hover {
             color: $link-hover;
             transition: 0.25s ease-in;
